<resources>
    <string name="app_name">Kalori</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="please_enter_your_email_below_to_recieve_your_password_reset_instruction">Please enter your email below to recieve your password reset instruction</string>
    <string name="email">Email</string>
    <string name="send_password">Send Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_code_was_sent_to_your_email_please_enter_the_code_and_create_new_password">Reset code was sent to your email. Please enter the code and create new password.</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter your reset code</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="change_password">Change Password</string>
    <string name="successful">Successful!!</string>
    <string name="you_have_successfully_changed_password_please_use_your_new_passwords_when_logging_in">You have successfully changed password. Please use your new passwords when logging in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_into_continue">Sign In Into Continue</string>
    <string name="username">Username</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="log_in">LOG IN</string>
    <string name="task_and_assign_them_to_colleagues">Task and Assign them to colleagues</string>
    <string name="task_and_assign">Task and Assign</string>
    <string name="get_started">Get Started</string>
    <string name="what_is_going_to_happen_tomorrow">What is going to happen tomorrow ?</string>
    <string name="welcome_to_dts_vsga">Welcome To DTS VSGA</string>
    <string name="work_happen">Work Happen</string>
    <string name="get_notified_when_work_happens">Get Notified When Work Happens</string>
    <string name="contact_us">Contact us</string>
    <string name="don_t_have_an_account">Dont have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="registration">Registration</string>
    <string name="nama">Nama</string>
    <string name="phone_number">Phone Number</string>
    <string name="welcome_home">Welcome Home!!!</string>
    <string name="sign_in">Sign In</string>
</resources>